package com.marco.cloud_ecommerce_api.domain.product;

public enum ProductStatus {
    DRAFT,
    ACTIVE,
    DEACTIVATED
}
