package com.marco.cloud_ecommerce_api.domain.user;

public enum Role {
    ADMIN,
    CUSTOMER
}
