package com.marco.cloud_ecommerce_api.domain.user;

public enum UserStatus {
    ACTIVE,
    INACTIVE,
    BLOCKED
}
