@startuml
title Domain Model - cloud-ecommerce-api (v0.7 - CORREGIDO)
caption Autor: Marco Orlando Bustos Blas - Fecha: 2026-04-13
caption Correcciones: User sin orderIds, agregado UserStatus, eliminado confirm() de Order

package "Domain Layer" {

    enum ProductStatus {
        DRAFT
        ACTIVE
        DEACTIVATED
    }

    class Product {
        - UUID id
        - String sku
        - String name
        - String description
        - BigDecimal price  // TODO: Replace with Money Value Object
        - UUID categoryId
        - String imageUrl
        - ProductStatus status
        - Inventory inventory
        - LocalDateTime createdAt
        - LocalDateTime updatedAt
        ---
        + void updateBasicInfo(String name, String description)
        + void updatePrice(BigDecimal newPrice)
        + void changeCategory(UUID newCategoryId)
        + void updateImageUrl(String imageUrl)

        + void activate()
        + void deactivate()

        + void restock(int amount)
        + void reserveStock(int amount)
        + void confirmOrder(int amount)
        + void releaseReservation(int amount)

        + int getAvailableStock()
        + boolean hasStock(int requested)
    }

    class Category {
        - UUID id
        - String name
        - boolean active
        - LocalDateTime createdAt
        - LocalDateTime updatedAt
        ---
        + void rename(String newName)
        + void activate()
        + void deactivate()
    }

    class Inventory {
        - UUID id
        - int quantity
        - int reservedQuantity
        - LocalDateTime lastUpdated
        - Long version  // Optimistic locking
        ---
        ~ void restock(int amount)
        ~ void reserveStock(int amount)
        ~ void confirmReservation(int amount)
        ~ void releaseReservation(int amount)
        ~ void clearAllReservations()
        + int getAvailableQuantity()
        + boolean hasAvailableStock(int requested)
        --
        Invariantes:
        - quantity >= 0
        - reservedQuantity >= 0
        - reservedQuantity <= quantity
        --
        Validaciones en métodos:
        - reserveStock: reserved + amount <= quantity
        - confirmReservation: amount <= reservedQuantity
        - releaseReservation: amount <= reservedQuantity
    }

    enum OrderStatus {
        PENDING
        PAID
        SHIPPED
        DELIVERED
        CANCELLED
    }

    class Order {
        - UUID id
        - UUID userId
        - List<OrderItem> items
        - OrderStatus status
        - LocalDateTime createdAt
        - String idempotentKey
        - Long version
        ---
        + void pay()
        + void cancel()
        + BigDecimal getTotal()  // TODO: Return Money
        + boolean canBePaid()
        + boolean canBeCancelled()
        + List<OrderItem> getItems()
    }

    class OrderItem {
        - UUID productId
        - String productName
        - int quantity
        - BigDecimal unitPrice  // TODO: Replace with Money
        ---
        + BigDecimal getSubtotal()  // TODO: Return Money
    }

    class Cart {
        - UUID id
        - UUID userId
        - List<CartItem> items
        ---
        + void addItem(UUID productId, String productName, int quantity, BigDecimal unitPrice)
        + void removeItem(UUID productId)
        + void updateQuantity(UUID productId, int quantity)
        + void clear()
        ---
        + BigDecimal getTotal()  // TODO: Return Money
        + boolean isEmpty()
        + List<CartItem> getItems
        ---
        --
        Nota: Aggregate Root
        Se persiste en Redis (infraestructura)
        Invariantes:
         - Cantidad siempre > 0
         - No items duplicados (se suman)
    }

    class CartItem {
        - UUID productId
        - String productName
        - int quantity
        - BigDecimal unitPrice  // TODO: Replace with Money
        ---
        + void addQuantity(int amount)
        + void setQuantity(int newQuantity)
        + BigDecimal getSubtotal()  // TODO: Return Money
        ---
        --
        Nota: Entity interna del aggregate Cart
        No se accede directamente desde fuera
        Invariantes:
        - quantity > 0
        - unitPrice > 0
    }

    enum Role {
        ADMIN
        CUSTOMER
    }

    enum UserStatus {
        ACTIVE
        INACTIVE
        BLOCKED
    }

    class User {
        ' === ATRIBUTOS ===
        - UUID id
        - String email
        - String passwordHash
        - Set<Role> roles
        - UserStatus status
        - UUID cartId
        - LocalDateTime createdAt
        - LocalDateTime updatedAt
        --
        ' === CONSTRUCTORES ===
        + User(String email, String passwordHash)
        + User(UUID id, String email, String passwordHash, Set<Role> roles, UserStatus status, UUID cartId, LocalDateTime createdAt, LocalDateTime updatedAt)
        --
        ' === VALIDACIONES PRIVADAS (no visibles en diagrama) ===
        ' - setEmail(String email)
        ' - setPasswordHash(String passwordHash)
        --
        ' === UPDATE METHODS ===
        + void changeEmail(String newEmail)
        + void changePassword(String newPasswordHash)
        --
        ' === ROLE MANAGEMENT ===
        + void addRole(Role role)
        + void removeRole(Role role)
        + boolean hasRole(Role role)
        + boolean isAdmin()
        --
        ' === STATUS MANAGEMENT ===
        + void activate()
        + void deactivate()
        + void block()
        --
        ' === CART MANAGEMENT ===
        + void setCartId(UUID cartId)
        + void removeCartId()
        --
        ' === GETTERS ===
        + UUID getId()
        + String getEmail()
        + Set<Role> getRoles()
        + UserStatus getStatus()
        + UUID getCartId()
        + LocalDateTime getCreatedAt()
        + LocalDateTime getUpdatedAt()
        --
        ' ===== EQUALS & HASHCODE =====
        + boolean equals(Object o)
        + int hashCode()
    }

    ' Relaciones (CORREGIDAS)
    Category "1" -- "*" Product : categorized by (via categoryId)
    Product "1" o-- "1" Inventory : aggregation
    User "1" -- "0..1" Cart : owns (via cartId)
    Order "1" *-- "*" OrderItem : composition
    Cart "1" *-- "*" CartItem : composition

    '' NOTAS

    '' Order NO tiene relación directa en el diagrama con User
    '' La relación es por userId (consulta inversa en repositorio)

    '' Changes realized at 24-04-26, 16:07 hrs

    '' Aggregation is a "has-a" relationship with weak ownership, where parts exist independently of the whole (e.g., Car-Engine)
    '' Composition is a "part-of" relationship with strong ownership, where the child’s lifecycle depends on the parent (e.g., House-Room).
    '' Cambio Relación *-- → o-- en diagrama
    '' La naturaleza de la relación cambia: Inventory ya no es "parte vital" de Product

    '' Change *-- to o-- to reflect soft delete business rule
    '' Inventory has historical value and should not be deleted with Product
    '' Product uses status=DEACTIVATED for soft delete, not hard delete
    '' This aligns with real-world business requirements

    note right of Product
        // TODO: Replace BigDecimal price with Money
        // TODO: Add currency support
    end note

    note bottom of Cart
        PERSISTENCIA: Redis (NO JPA)
        TTL configurable
    end note

    note bottom of Order
        IDEMPOTENCIA: idempotentKey con unique constraint
        CONCURRENCIA: version para optimistic locking
        La relación con User es por userId (no se dibuja)
    end note

    note right of User
        NOTA: User NO tiene lista de orderIds (evita problemas de rendimiento)
        Para obtener órdenes: orderRepository.findByUserId(userId)
    end note
}
@enduml